...
        applicableCategories: ['Utility Bills'],
      ),
      MetadataFieldDef(
        key: 'quickCommercePlatform',
        label: 'Platform',
        type: MetadataFieldType.text,
        applicableCategories: ['Groceries', 'Snacks', 'Beverages'],
      ),
    ],
    'LUXURY_ESSENTIAL': [
      MetadataFieldDef(
        key: 'vehicle',
        label: 'Vehicle',
...
